[package]
name = "dbviz"
version = "1.1.0"
authors = ["yunmi <yunmikun2@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "2.33"
itertools = "0.10"
postgres = "0.19"
structopt = "0.3.25"
